--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/express": "^4.17.8",
 		"@types/node": "^14.14.5",
 		"express": "^4.17.1",
+		"googleapis": "^61.0.0",
 		"tsc-watch": "^4.2.9",
 		"typescript": "^4.0.5"
 	},
