--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "Oliver Carlson <oswain@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
+		"@google-cloud/local-auth": "^1.0.0",
 		"@types/express": "^4.17.8",
 		"@types/node": "^14.14.5",
 		"express": "^4.17.1",
