--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@google-cloud/local-auth": "^1.0.0",
 		"@types/express": "^4.17.8",
+		"@types/gapi": "0.0.39",
 		"@types/node": "^14.14.5",
 		"express": "^4.17.1",
 		"googleapis": "^61.0.0",
