--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"@types/express": "^4.17.8",
 		"@types/gapi": "0.0.39",
 		"@types/node": "^14.14.5",
+		"@types/underscore.string": "0.0.38",
 		"express": "^4.17.1",
 		"googleapis": "^61.0.0",
 		"tsc-watch": "^4.2.9",
-		"typescript": "^4.0.5"
+		"typescript": "^4.0.5",
+		"underscore.string": "^3.3.5"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^4.6.0",
