- Added readline-promise instead of manual implementation. - Removed manual implementation for rl and ts-rl. - Improved gitignore to better exclude temp files for debugging. - WIP: Cleaning up google auth flow to read from fs. - WIP: Improve error handling for main();

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+# TS and Node Files:
 /dist
 node_modules
 .env
-credentials.json
-token.json
-*.txt
+
+
+# Files for debugging.
+**credentials.json
+**token.json
+**.txt
